# hAudit

config/: conductor-config.yaml
electron-app/: electron.vite.config.ts  neuesAudit.json  norms.json  package-lock.json  package.json  questions.json  tsconfig.node.json
electron-app/src/main/: index.ts
electron-app/src/preload/: index.ts
electron-app/src/renderer/: index.html
electron-app/src/renderer/src/: App.vue  QuestionService.ts  main.ts  router.js
electron-app/src/renderer/src/assets/: main.css
electron-app/src/renderer/src/components/: CreateAuditReport.vue  types.ts
electron-app/src/renderer/src/views/: Contacts.vue  LoadAudit.vue  MainMenu.vue  NewAudit.vue  ShareAudit.vue  SharedAudits.vue
happ/haudit_app/: Cargo.toml  README.md  flake.nix  package-lock.json  package.json
happ/haudit_app/dnas/forum/workdir/: dna.yaml
happ/haudit_app/dnas/forum/zomes/coordinator/posts/src/: all_posts.rs  comment.rs  post.rs
happ/haudit_app/dnas/forum/zomes/integrity/posts/src/: comment.rs  lib.rs  post.rs
happ/haudit_app/tests/: package.json
happ/haudit_app/tests/src/forum/posts/: all-posts.test.ts  comment.test.ts  post.test.ts
happ/haudit_app/ui/: package.json
happ/haudit_app/ui/src/: App.vue
happ/haudit_app/ui/src/forum/posts/: AllPosts.vue  CommentDetail.vue  CommentsForPost.vue  CreateComment.vue  CreatePost.vue  EditPost.vue  PostDetail.vue  types.ts
happ/haudit_app/workdir/: happ.yaml  web-happ.yaml
